2009-02-20 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/rtai_names.h, rtai_msg.h: remove define of
	  RTAI_MAX_NAME_LENGTH.
	* base/include/rtai_sched.h: put define of RTAI_MAX_NAME_LENGTH here.

2009-02-16 Pierangelo Masarati <masarati@aero.polimi.it>

	* RTAI 3.7-test1

2009-02-13 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/rtai_wrappers.h: provide macro CONFIG_MMU missing
	  in 2.4.xx

2009-02-12 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/x86_64/hal/hal.immed,
	* base/include/asm-x86_646/rtai_hal.h: commit forgotten changes
	  to irq_ack to work both with > 2.6.26 and previous releases.

2009-02-12 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/i386/hal/hal.immed: adapt irq definition in 
	  hirq_dispatcher to patches > 2.6.27.

2009-02-10 Pierangelo Masarati <masarati@aero.polimi.it>

	* base/scripts/rtai-load.in: first look for modules in the 
	  module dir (patch submitted by Paul, <paul_c@tuxcnc.org>)

2009-02-04 Pierangelo Masarati <masarati@aero.polimi.it>

	* configure.in: fix arm-related conditionals
	* */GNUmakefile.am: install modules in moduledir;
	  consistently use bindir

2009-01-29 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/asm-i386, asm-x86_64/rtai_hal.h modify inline asm
	  in rtai_u64div32c to avoid aliasing warnings with ggc > 4.3.
	* base/arch/i386, x86_64/Kconfig make eager inlines the default to
	  avoid flood of warnings for static inline within extern inline
	  with gcc > 4.3.
	* base/include/rtai_nam2num.h: force RTAI_PROTO to static inline
	  in kernel space, otherwise we'll miss nam2num when RTAI_PROTO
	  is set to no inline.

2009-01-27 Valentin Pavlyuchenko <TheValik@gmail.com>

	* /base/include/rtai_shm.h: make uvirt_to_kva dependent on CONFUG_MMU.
	* /base/include/rtai_lxrt.h: provide dummy rt_grow_and_lock_stack for
	  no CONFIG_MMU.

2009-01-22 Paolo Mantegazza <mantegazza@aero.polimi.it>
