@@ -1,3 +1,8 @@
+2009-02-20 Pierangelo Masarati <masarati@aero.polimi.it>
+
+	* base/tasklets/signal.c: removed
+	* rtai_signal.ko: no longer built/installed
+
 2009-02-20 Paolo Mantegazza <mantegazza@aero.polimi.it>
 
 	* base/include/rtai_names.h, rtai_msg.h: remove define of
